[metadata]
name = labo
version = 0.1.0
description = A LaTeX bootstrapper
long_descriptions = file: README.md
url = https://github.com/dhoekstra2000/labo
license = MIT
license_files = LICENSE
author = Douwe Hoekstra
author_email = douwe dot hoekstra2512 at gmail dot com
keywords = LaTeX bootstrap template
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
packages = labo
install_requires =
    Click
    Jinja2
    tomli
    rich

[options.entry_points]
console_scripts =
    labo = labo.main:cli
